--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,15 +8,18 @@
     <string name="previous">Previous</string>
 
     <!-- My custom Strings -->
-    <string name="home_activity_layout_welcome_text">AnToon</string>
-    <string name="password_edit_text">Password:</string>
-    <string name="password_auto_fill_hints_edit_text">Password</string>
-    <string name="login_text">Login</string>
-    <string name="login_edit_text">Login:</string>
-    <string name="login_auto_fill_hints_edit_text">Login</string>
-    <string name="email_edit_text">Email:</string>
-    <string name="email_auto_fill_hints_edit_text">Email</string>
-    <string name="font"></string>
+    <string name="home_activity_layout_welcome_text_string">AnToon</string>
+    <string name="password_edit_text_string">Password:</string>
+    <string name="password_auto_fill_hints_edit_text_string">Password</string>
+    <string name="login_text_string">Login</string>
+    <string name="login_edit_text_string">Login:</string>
+    <string name="login_auto_fill_hints_edit_text_string">Login</string>
+    <string name="email_edit_text_string">Email:</string>
+    <string name="email_auto_fill_hints_edit_text_string">Email</string>
+    <string name="pop_up_menu_logout_text_string">Logout</string>
+    <string name="pop_up_menu_font_text_string">Font</string>
+    <string name="kalam_string_font">Kalam</string>
+    <string name="komtxtb_string_font">Komtxtb</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
