--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="komtxtb_string_font">Komtxtb</string>
     <string name="comicsPictureDescriptionString">Picture of Comics</string>
     <string name="comicsNameString">Comics Name</string>
-    <string name="chapterCount">1/99</string>
+    <string name="newestChapter">99</string>
+    <string name="atChapter">0</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
